--- a/src/app/Paginas/Body/detalle-usuario/gastos-entradas/gastos-entradas.component.css
+++ b/src/app/Paginas/Body/detalle-usuario/gastos-entradas/gastos-entradas.component.css
@@ -17,3 +17,20 @@
 .col-8 {
   width:60% !important;
 }
+
+.table-fixed tbody tr {
+  height: 45px !important;
+}
+.table-fixed thead{
+  height: 50px !important;
+}
+@media screen and (max-width: 1920px) and (max-height: 1080px) {
+  .table-fixed tbody{
+    height: 300px !important;
+  }
+}
+@media screen and (max-width: 1366px) and (max-height: 768px) {
+  .table-fixed tbody{
+    height: 80px !important;
+  }
+}
