--- a/src/app/Paginas/Body/detalle-usuario/gastos/gastos.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/gastos/gastos.component.html
@@ -84,27 +84,27 @@
       </tr>
       </thead>
       <thead>
-      <tr>
-        <th scope="col" style="width: 5%">#</th>
-        <th scope="col" colspan="2" style="width: 65%">Categoria</th>
-        <th scope="col" style="width: 30%">Cantidad</th>
-      </tr>
+        <tr>
+          <th scope="col" style="width: 5%">#</th>
+          <th scope="col" colspan="2" style="width: 65%">Categoria</th>
+          <th scope="col" style="width: 30%">Cantidad</th>
+        </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let color of pieChartColors[0].backgroundColor; let i = index">
-        <td style="width: 5%" class="font-weight-500">{{i + 1}}</td>
-        <td style="width: 15%">
-          <div class="categoria" #colorCategorias></div>
-        </td>
-        <td style="width: 50%">{{pieChartLabels[i]}}</td>
-        <td style="width: 30%">{{pieChartData[i] | currency: '$':'symbol':'1.2-6'}}</td>
-      </tr>
+        <tr *ngFor="let color of pieChartColors[0].backgroundColor; let i = index">
+          <td style="width: 5%" class="font-weight-500">{{i + 1}}</td>
+          <td style="width: 15%">
+            <div class="categoria" #colorCategorias></div>
+          </td>
+          <td style="width: 50%">{{pieChartLabels[i]}}</td>
+          <td style="width: 30%">{{pieChartData[i] | currency: symbolsAccountsPieCharData[i] : 'symbol': util.symbolDecimalNumber6Digits}}</td>
+        </tr>
       </tbody>
-      <tbody style="height: 40px!important; overflow-y: hidden!important; overflow-x: hidden!important;">
-      <tr>
-        <td style="width: 70%" class="font-weight-500" colspan="3">TOTAL</td>
-        <td style="width: 30%">{{util.sumaTotal(pieChartData) | currency: '$':'symbol':'1.2-6'}}</td>
-      </tr>
+      <tbody style="height: 40px!important; overflow-y: hidden!important; overflow-x: hidden!important;" >
+        <tr *ngFor="let total of totalesAccountsPieCharData">
+          <td style="width: 70%" class="font-weight-500" colspan="3">TOTAL</td>
+          <td style="width: 30%">{{total.total | currency: total.symbol : 'symbol' : util.symbolDecimalNumber6Digits}}</td>
+        </tr>
       </tbody>
     </table>
   </div>
