--- a/src/app/Paginas/Body/login/recuperar-contrasena/recuperar-contrasena.component.css
+++ b/src/app/Paginas/Body/login/recuperar-contrasena/recuperar-contrasena.component.css
@@ -85,7 +85,7 @@ body {
   position: relative;
   background: #ffffff;
   border-radius: 5px;
-  padding: 60px 0 40px 0;
+  padding: 60px 10px 40px 10px;
   box-sizing: border-box;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: .3s ease;
