--- a/src/app/Paginas/Header/titulo-encabezado/titulo-encabezado.component.html
+++ b/src/app/Paginas/Header/titulo-encabezado/titulo-encabezado.component.html
@@ -1,6 +1,6 @@
 <div class="tamaño-titulo-encabezado">
   <div class="tam-titulo-encabezado">
     <h3 class="text-light font-weight-normal">{{titulo}}</h3>
-    <h5 class="text-light font-weight-lighter">{{subTitulo}}</h5>
+    <h5 class="text-light font-weight-lighter" *ngIf="subTitulo != 'Usuario: '">{{subTitulo}}</h5>
   </div>
 </div>
