--- a/src/app/Paginas/Body/detalle-usuario/gastos-entradas/gastos-entradas.component.css
+++ b/src/app/Paginas/Body/detalle-usuario/gastos-entradas/gastos-entradas.component.css
@@ -31,6 +31,6 @@
 }
 @media screen and (max-width: 1366px) and (max-height: 768px) {
   .table-fixed tbody{
-    height: 80px !important;
+    height: 150px !important
   }
 }
