--- a/src/app/Paginas/Body/login/login.component.html
+++ b/src/app/Paginas/Body/login/login.component.html
@@ -4,7 +4,7 @@
   color="#fff"
   type="ball-scale-multiple"
 >
-  <p style="font-size: 20px; color: white">Comprobando datos...</p>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 <app-titulo-encabezado titulo="Iniciar sesion "></app-titulo-encabezado>
 
