--- a/src/app/Paginas/Body/usuarios/perfil/perfil.component.html
+++ b/src/app/Paginas/Body/usuarios/perfil/perfil.component.html
@@ -155,7 +155,7 @@
             <div class="col-12">
               <div class="d-inline-flex align-content-center align-items-center" >
 
-                <h3 class="font-weight-500 text-center" style="font-size: 23px!important;">Permisos</h3>
+                <h3 class="title-Header">Permisos</h3>
 
               </div>
             </div>
