--- a/src/app/Components/query-complete/query-complete.component.html
+++ b/src/app/Components/query-complete/query-complete.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-query-complete">
   <div class="alert alert-success text-center" role="alert">
     {{msj}}
   </div>
