--- a/src/app/Paginas/Body/usuarios/perfil/perfil.component.css
+++ b/src/app/Paginas/Body/usuarios/perfil/perfil.component.css
@@ -1,3 +1,16 @@
+.title-Header {
+  font-size: 23px!important;
+  font-weight: 400;
+  color: white;
+}
+
+.card-rounded-feature  {
+  border-radius: 10px !important;
+}
+.card-rounded-feature > .card-header {
+  border-radius: 10px !important;
+}
+
 .profile-avatar {
   width: 100%!important; height: 100%!important;
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
@@ -50,6 +63,9 @@
   padding-top: 50px !important;
 }
 @media screen and (max-width: 1920px) and (max-height: 1080px) {
+  .table-fixed tbody {
+    height: 450px;
+  }
   .super-container {
     margin: 0 150px 0 150px;
   }
@@ -142,4 +158,3 @@
 .addButton:hover {
   background-color: #007bff !important;
 }
-
