Correciones bugs FrontEn

--- a/src/app/Paginas/Body/detalle-usuario/gastos/gastos.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/gastos/gastos.component.html
@@ -4,7 +4,7 @@
   color="#fff"
   type="ball-scale-multiple"
 >
-  <p style="font-size: 20px; color: white">{{msj}}</p>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 <div class="row" style="margin-top: 50px;">
 
