--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -4,7 +4,7 @@
   color="#fff"
   type="ball-scale-multiple"
 >
-  <p style="font-size: 20px; color: white">{{msj}}</p>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
@@ -320,5 +320,5 @@
 
 </div>
 <div class="container" *ngIf="backupService.userBackups.length == 0">
-  <h3 class="font-weight-lighter text-center">{{msj}}</h3>
+  <h3 class="font-weight-lighter text-center">{{util.msj}}</h3>
 </div>
