--- a/src/app/Paginas/Body/detalle-usuario/gastos-entradas/gastos-entradas.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/gastos-entradas/gastos-entradas.component.html
@@ -4,7 +4,7 @@
   color="#fff"
   type="ball-scale-multiple"
 >
-  <p style="font-size: 20px; color: white">{{msj}}</p>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 <div class="row" style="margin-top: 50px;">
   <div class="col-7"></div>
@@ -26,15 +26,12 @@
           <option *ngFor="let y of years;" [value]="y.year">{{(y.year == '0') ? 'Todos' : y.year}}</option>
         </select>
       </div>
-
     </div>
-
   </div>
 </div>
 <div>
 
   <div style="display: block; padding-left: 5px; padding-right: 5px">
-
     <div class="row">
       <div class="col-9">
         <canvas baseChart
@@ -82,7 +79,6 @@
           </tr>
           </tbody>
         </table>
-
       </div>
     </div>
   </div>
