--- a/src/app/Paginas/Body/home/home.component.html
+++ b/src/app/Paginas/Body/home/home.component.html
@@ -4,7 +4,7 @@
   color="#fff"
   type="ball-scale-multiple"
 >
-  <p style="font-size: 20px; color: white">Buscando Backups</p>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 
 <div class="container-home">
