Avance detalles Front-End

--- a/src/app/Paginas/Body/exportacion/exportacion.component.html
+++ b/src/app/Paginas/Body/exportacion/exportacion.component.html
@@ -82,7 +82,7 @@
   <h3 class="font-weight-normal">{{util.emailUserExportacionBackups}}</h3>
 </div>
 
-<button class="up-right rounded-circle" (click)="util.subir()">
+<button class="btn btn-danger rounded-circle up-right" (click)="util.subir()">
     <span>
       <fa-icon [icon]="util.faArrowUp"></fa-icon>
     </span>
